# shellmet

./: .travis.yml  CHANGELOG.md  README.md  shellmet.cabal  stack-8.2.2.yaml  stack.yaml
.github/workflows/: ci.yml
src/: Shellmet.hs
test/: Doctest.hs
