cabal-version:       2.4
name:                shellmet
version:             0.0.4.1
synopsis:            Out of the shell solution for scripting in Haskell
description:         Shellmet provides easy and convenient way to call shell commands from Haskell programs
homepage:            https://github.com/kowainik/shellmet
bug-reports:         https://github.com/kowainik/shellmet/issues
license:             MPL-2.0
license-file:        LICENSE
author:              Dmitrii Kovanikov
maintainer:          Kowainik <xrom.xkov@gmail.com>
copyright:           2019-2022 Kowainik
category:            Shell, Command Line
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.2.2
                     GHC == 8.4.4
                     GHC == 8.6.5
                     GHC == 8.8.4
                     GHC == 8.10.7
                     GHC == 9.0.2
                     GHC == 9.2.3

source-repository head
  type:                git
  location:            https://github.com/kowainik/shellmet.git

common common-options
  build-depends:       base >= 4.10.1.0 && < 4.17

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
                       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies
                       -Werror=missing-deriving-strategies
  if impl(ghc >= 8.10)
    ghc-options:       -Wunused-packages
  if impl(ghc >= 9.0)
    ghc-options:       -Winvalid-haddock
  if impl(ghc >= 9.2)
    ghc-options:       -Wredundant-bang-patterns
                       -Woperator-whitespace

  default-language:    Haskell2010
  default-extensions:  ConstraintKinds
                       DeriveGeneric
                       GeneralizedNewtypeDeriving
                       InstanceSigs
                       KindSignatures
                       LambdaCase
                       OverloadedStrings
                       RecordWildCards
                       ScopedTypeVariables
                       StandaloneDeriving
                       TupleSections
                       TypeApplications
                       ViewPatterns

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Shellmet

  build-depends:       process ^>= 1.6.1
                     , text >= 1.2.3 && < 2.1

executable readme
  import:              common-options
  if os(windows)
    buildable: False
  main-is:             README.lhs
  build-depends:       shellmet
                     , text

  build-tool-depends:  markdown-unlit:markdown-unlit
  ghc-options:         -pgmL markdown-unlit
  default-language:    Haskell2010

test-suite shellmet-doctest
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Doctest.hs

  build-depends:       doctest
                     , Glob

  ghc-options:         -threaded
